force-app/main/default/objects/Brand_Technical_Bulletin__c/Brand_Technical_Bulletin__c.object-meta.xml
<CustomObject>
    <description>Technical bulletins / FAQs for vehicles — used as knowledge source for Agentforce voice technical questions.</description>
    <label><Brand> Technical Bulletin</label>
    <nameField>
        <label>Bulletin Number</label>
        <displayFormat>TB-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel><Brand> Technical Bulletins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>