force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Content_Body__c.field-meta.xml
<CustomField>
    <fullName>Content_Body__c</fullName>
    <description>Full narrative body of the bulletin — used directly as Agentforce knowledge text.</description>
    <inlineHelpText>The body text the agent will read or summarize.</inlineHelpText>
    <label>Content Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>