force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country market for the bulletin: AR, BR, or BOTH.</description>
    <inlineHelpText>AR, BR, or BOTH.</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>BOTH</fullName>
                <default>true</default>
                <label>BOTH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>