force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language of the bulletin content (ES = Spanish, PT = Portuguese).</description>
    <inlineHelpText>ES or PT.</inlineHelpText>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
                <default>true</default>
                <label>ES</label>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>