force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Source_Document__c.field-meta.xml
<CustomField>
    <fullName>Source_Document__c</fullName>
    <description>Source manual or document the bulletin was extracted from (e.g., "Manual Corolla 2019 G12, p. 42").</description>
    <inlineHelpText>Citation pointer for the bulletin content.</inlineHelpText>
    <label>Source Document</label>
    <length>200</length>
    <type>Text</type>
</CustomField>