force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma-separated keyword tags used by the retriever to match user questions.</description>
    <inlineHelpText>Keywords (comma-separated) for retrieval matching.</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>