force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Topic / subject of the bulletin (e.g., "VSC Button — Vehicle Stability Control").</description>
    <inlineHelpText>Short title that identifies the bulletin topic.</inlineHelpText>
    <label>Topic</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>