force-app/main/default/objects/Brand_Technical_Bulletin__c/fields/Vehicle_Models__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Models__c</fullName>
    <description>Vehicle models this bulletin applies to (use "All Models" when generic).</description>
    <inlineHelpText>Models the bulletin applies to.</inlineHelpText>
    <label>Vehicle Models</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Models</fullName>
            </value>
            <value>
                <fullName>SW4</fullName>
            </value>
            <value>
                <fullName>Hilux DC</fullName>
            </value>
            <value>
                <fullName>Hilux SC</fullName>
            </value>
            <value>
                <fullName>Yaris HB</fullName>
            </value>
            <value>
                <fullName>Yaris HB TOP</fullName>
            </value>
            <value>
                <fullName>Yaris HB AT</fullName>
            </value>
            <value>
                <fullName>Corolla</fullName>
            </value>
            <value>
                <fullName>Corolla HV</fullName>
            </value>
            <value>
                <fullName>Corolla Cross HV</fullName>
            </value>
            <value>
                <fullName>Etios HB</fullName>
            </value>
            <value>
                <fullName>HIACE</fullName>
            </value>
            <value>
                <fullName>RAV4 PHEV</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>